--- a/src/scss/block/dataview.scss
+++ b/src/scss/block/dataview.scss
@@ -143,7 +143,7 @@
 
 				.cellContent.c-title { @include text-paragraph; }
 
-				.icon.checkbox { width: 24px; height: 24px; }
+				.icon.checkbox { width: 24px; height: 24px; vertical-align: top; }
 			}
 		}
 	}	
