cover default param

--- a/src/scss/block/dataview.scss
+++ b/src/scss/block/dataview.scss
@@ -134,6 +134,7 @@
 				}
 			}
 			
+			.view.viewList { padding: 20px 0px 0px 0px; }
 			.view.viewList {
 				.item { width: 100%; display: inline-block; margin-bottom: 8px; }
 				.item:last-child { margin: 0px; }
