--- a/src/scss/page/main/edit.scss
+++ b/src/scss/page/main/edit.scss
@@ -1,7 +1,6 @@
 @import "~scss/_vars";
 
 .pageMainEdit {
-	.wrapper { width: 704px; margin: 0px auto; padding: 40px 0px 0px 0px; }
-	.blocks { margin-left: -48px; }
+	.wrapper { padding: 38px 0px 0px 0px; }
 	.wrapper > .loaderWrapper { position: fixed; left: 0px; top: 0px; width: 100%; height: 100%; }
 }
