--- a/src/scss/block/dataview.scss
+++ b/src/scss/block/dataview.scss
@@ -156,6 +156,11 @@
 				.column {
 					.head { padding: 10px 4px; }
 				}
+
+				.cellContent.c-title {
+					.smile { margin-bottom: 10px; }
+					.name { max-width: 100%; }
+				}
 				
 				.card { width: 100%; margin-bottom: 8px; }
 				
