--- a/src/scss/component/dragLayer.scss
+++ b/src/scss/component/dragLayer.scss
@@ -1,8 +1,8 @@
-.dragLayer { position: fixed; z-index: 1000; left: -10000px; top: -10000px; background: #fff; box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.2); }
+.dragLayer { position: fixed; z-index: 1000; left: -10000px; top: -10000px; box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.2); }
 .dragLayer {
 	.blocks { margin: 0px !important; }
 	.blocks {
-		.block { border: 0px; width: 100% !important; padding: 0px !important;  }
+		.block { border: 0px; width: 100% !important; padding: 0px !important; opacity: 0.35; background: #fff; }
 		.block {
 			.wrapMenu { display: none; }
 			.wrapContent { width: 100%; padding-left: 4px; }
