--- a/src/scss/debug.scss
+++ b/src/scss/debug.scss
@@ -9,6 +9,7 @@ html.debug {
 		.block { border: 1px solid rgba(255,0,0,0.3); }
 		.block {
 			.wrapMenu { background-color: rgba(0,255,0,0.1); }
+			.icon.dnd { background-color: rgba(0,255,0,0.1); }
 		}
 
 		.block.blockLayout.c0 { border-color: rgba(0,255,0,0.3); }
