--- a/src/scss/block/common.scss
+++ b/src/scss/block/common.scss
@@ -3,30 +3,31 @@
 .blocks {
 	.block { font-size: 16px; line-height: 24px; word-break: break-word; display: flex; flex: auto; position: relative; margin: 0px 0px 2px 0px; }
 	.block {
-		.wrapMenu { width: 48px; text-align: right; }
+		.wrapMenu { width: 48px; text-align: right; position: relative; }
 		.wrapContent { width: calc(100% - 48px); position: relative; }
 		
 		.flex { position: relative; z-index: 2; }
 		.icon.dnd { 
-			width: 12px; background-size: 2px 10px; opacity: 0; cursor: grab; vertical-align: top; 
-			border: 1px solid #dfddd0; box-shadow: 0px 0px 0px 0px rgba(255,255,255, 0); border-radius: 12px; height: 100%; transition: $transitionFast; margin-right: 7px;
-			background-image: url('~img/icon/block/menu0.svg');
-		}
-		.icon.dnd:hover { 
-			background-image: url('~img/icon/block/menu2.svg'); border-color: $colorOrange; 
-			box-shadow: 0px 0px 0px 1px $colorOrange;
+			width: 20px; height: 20px; opacity: 0; cursor: grab; position: absolute; right: 2px; top: 50%; margin-top: -10px; 
+			transition: $transitionFast; background-image: url('~img/icon/block/menu.svg');
 		}
 		
 		.colResize { width: 0px; position: relative; opacity: 0; z-index: 10; }
 		.colResize.active { opacity: 1; }
 		.colResize {
-			.inner { position: absolute; left: 20px; top: -15px; width: 8px; height: calc(100% + 30px); cursor: col-resize; z-index: 1; }
-			.line { height: 100%; width: 2px; background: #ebe9e0; position: absolute; left: 50%; top: 0px; margin-left: -1px; }
+			.inner { 
+				position: absolute; left: 19px; top: -15px; width: 8px; height: calc(100% + 30px); cursor: col-resize; z-index: 1; 
+				
+			}
+			.line { 
+				height: 100%; width: 2px; background: $colorDarkGrey; position: absolute; left: 50%; top: 0px; margin-left: -1px; 
+				border-radius: 2px;
+			}
 		}
 		
 		.selectionOver { 
-			position: absolute; left: 0px; top: 0px; width: 100%; height: 100%; background: Highlight; opacity: 0.5;
-			display: none; pointer-events: none; z-index: 10;
+			position: absolute; left: -24px; top: 0px; width: calc(100% + 24px); height: 100%; background: $colorDarkGrey; opacity: 0.15;
+			display: none; pointer-events: none; z-index: 10; border-radius: 8px;
 		}
 		
 		.focusable { border-radius: inherit; }
@@ -57,7 +58,7 @@
 		content: ""; display: block; width: calc(100% - 48px); height: 2px; background: $colorOrange; position: absolute; right: 0px; bottom: -2px;
 	}
 	
-	.block:hover > .wrapMenu > .icon.dnd { opacity: 1; background-image: url('~img/icon/block/menu1.svg'); }
+	.block:hover > .wrapMenu > .icon.dnd { opacity: 1; }
 	.block.showMenuAdd > .wrapMenu > .icon.dnd { opacity: 1; }
 	.block.showMenu > .wrapMenu > .icon.dnd { opacity: 1; }
 
@@ -71,9 +72,17 @@
 	
 	.block.isDragging > .wrapContent > .selectable > .dropTarget { opacity: 0.3; }
 	
-	.block > .wrapContent > .selectable.isSelected > .selectionOver { display: block; }
 	.block > .wrapContent > .selectable.isSelected { 
 		.placeHolder { display: none !important; } 
+	}
+
+	.block.isSelected {
+		.bgColor { border-radius: 0px 8px 8px 0px; }
+		.selectionOver { display: block; }
+		.placeHolder { display: none !important; } 
+		.wrapMenu {
+			.icon.dnd { opacity: 1; }
+		}
 	}
 	
 	.block.blockIconPage > .wrapMenu { visibility: hidden; }
