--- a/src/scss/component/dragLayer.scss
+++ b/src/scss/component/dragLayer.scss
@@ -1,11 +1,14 @@
-.dragLayer { position: fixed; z-index: 1000; left: -10000px; top: -10000px; box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.2); }
+@import "~scss/_vars";
+
+.dragLayer { position: fixed; z-index: 1000; left: -10000px; top: -10000px; }
 .dragLayer {
 	.blocks { margin: 0px !important; }
 	.blocks {
-		.block { border: 0px; width: 100% !important; padding: 0px !important; opacity: 0.35; background: #fff; }
+		.block { border: 0px; width: 100% !important; padding: 0px !important; opacity: 0.35; }
 		.block {
 			.wrapMenu { display: none; }
-			.wrapContent { width: 100%; padding-left: 4px; }
+			.wrapContent { padding-left: 4px; }
+			.selectionOver { display: block; }
 			
 			.children {
 				.block { box-shadow: 0px 0px; padding: 0px; }
