--- a/src/scss/component/editor.scss
+++ b/src/scss/component/editor.scss
@@ -7,11 +7,10 @@
 	.editor { position: relative; }
 	.editor {
 		.icon.buttonAdd { 
-			width: 20px; height: 20px; border-radius: 100%; border: solid 1px #d2d0c2; position: absolute; z-index: 5; cursor: pointer; user-select: none;
-			background-size: 10px 10px; background-image: url('~img/icon/block/add0.svg'); opacity: 0;
-			transition: opacity 0.05s ease-in-out, background 0.05s ease-in-out, border-color 0.05s ease-in-out; 
+			width: 20px; height: 20px; position: absolute; z-index: 5; cursor: pointer; user-select: none;
+			background-image: url('~img/icon/block/add.svg'); opacity: 0;
+			transition: opacity 0.05s ease-in-out;
 		}
-		.icon.buttonAdd:hover { background-image: url('~img/icon/block/add1.svg'); background-color: $colorOrange; border-color: $colorOrange; }
 		
 		.blockLast { margin-left: -50px; }
 	}
