--- a/src/scss/block/common.scss
+++ b/src/scss/block/common.scss
@@ -8,7 +8,7 @@
 		
 		.flex { position: relative; z-index: 2; }
 		.icon.dnd { 
-			width: 20px; height: 20px; opacity: 0; cursor: grab; position: absolute; right: 2px; top: 50%; margin-top: -10px; 
+			width: 20px; height: 100%; background-size: 20px 20px; opacity: 0; cursor: grab; position: absolute; right: 2px; top: 0px;
 			transition: $transitionFast; background-image: url('~img/icon/block/menu.svg');
 		}
 		
@@ -25,6 +25,11 @@
 		}
 		
 		.selectionOver { 
+			position: absolute; left: 0px; top: 0px; width: 100%; height: 100%; background: Highlight; opacity: 0.35;
+			display: none; pointer-events: none; z-index: 10;
+		}
+
+		.menuOver { 
 			position: absolute; left: -24px; top: 0px; width: calc(100% + 24px); height: 100%; background: $colorDarkGrey; opacity: 0.15;
 			display: none; pointer-events: none; z-index: 10; border-radius: 8px;
 		}
@@ -58,8 +63,14 @@
 	}
 	
 	.block:hover > .wrapMenu > .icon.dnd { opacity: 1; }
-	.block.showMenuAdd > .wrapMenu > .icon.dnd { opacity: 1; }
-	.block.showMenu > .wrapMenu > .icon.dnd { opacity: 1; }
+	.block.showMenuAdd > .wrapMenu > .icon.dnd, 
+	.block.showMenu > .wrapMenu > .icon.dnd 
+	{ opacity: 1; }
+
+	.block.showMenuAdd > .wrapContent > .selectable > .menuOver { 
+		left: -24px; width: calc(100% + 24px); background: $colorDarkGrey; border-radius: 8px; opacity: 0.15;
+		display: block;
+	}
 
 	.block.isAdding.top > .wrapContent > .selectable > .dropTarget { border-radius: 0px 0px 4px 4px !important; }
 	.block.isAdding.bottom > .wrapContent > .selectable > .dropTarget { border-radius: 4px 4px 0px 0px !important; }
@@ -75,13 +86,9 @@
 		.placeHolder { display: none !important; } 
 	}
 
-	.block.isSelected {
-		.bgColor { border-radius: 0px 8px 8px 0px; }
-		.selectionOver { display: block; }
+	.block > .wrapContent > .selectable.isSelected > .selectionOver { display: block; }
+	.block > .wrapContent > .selectable.isSelected { 
 		.placeHolder { display: none !important; } 
-		.wrapMenu {
-			.icon.dnd { opacity: 1; }
-		}
 	}
 	
 	.block.blockIconPage > .wrapMenu { visibility: hidden; }
