--- a/src/scss/component/dragLayer.scss
+++ b/src/scss/component/dragLayer.scss
@@ -8,7 +8,7 @@
 		.block {
 			.wrapMenu { display: none; }
 			.wrapContent { padding-left: 4px; }
-			.selectionOver { display: block; }
+			.menuOver { display: block; }
 			
 			.children {
 				.block { box-shadow: 0px 0px; padding: 0px; }
