--- a/src/scss/component/dragLayer.scss
+++ b/src/scss/component/dragLayer.scss
@@ -4,10 +4,10 @@
 .dragLayer {
 	.blocks { margin: 0px !important; }
 	.blocks {
-		.block { border: 0px; width: 100% !important; padding: 0px !important; opacity: 0.35; }
+		.block { border: 0px; width: 100% !important; padding: 0px !important; }
 		.block {
 			.wrapMenu { display: none; }
-			.wrapContent { padding-left: 4px; }
+			.dropTarget { padding-left: 4px; opacity: 0.35; }
 			.menuOver { display: block; }
 			
 			.children {
