--- a/src/scss/block/common.scss
+++ b/src/scss/block/common.scss
@@ -9,7 +9,7 @@
 		.flex { position: relative; z-index: 2; }
 		.icon.dnd { 
 			width: 20px; height: 100%; background-size: 20px 20px; opacity: 0; cursor: grab; position: absolute; right: 2px; top: 0px;
-			transition: none; background-image: url('~img/icon/block/menu.svg');
+			background-image: url('~img/icon/block/menu.svg');
 		}
 		
 		.colResize { width: 0px; position: relative; opacity: 0; z-index: 10; }
@@ -31,7 +31,7 @@
 
 		.menuOver { 
 			position: absolute; left: -24px; top: 0px; width: calc(100% + 24px); height: 100%; background: rgba(172,169,150,0.15);
-			display: none; pointer-events: none; z-index: -1; border-radius: 8px;
+			pointer-events: none; z-index: -1; border-radius: 8px; opacity: 0; transition: opacity 0.2s ease-in-out;
 		}
 		
 		.focusable { border-radius: inherit; }
@@ -66,7 +66,7 @@
 	.block.showMenu > .wrapMenu > .icon.dnd, 
 	{ opacity: 1; }
 
-	.block.showMenu > .wrapContent > .selectable > .menuOver { display: block; }
+	.block.showMenu > .wrapContent > .selectable > .menuOver { opacity: 1; }
 	.block.showMenu > .wrapContent > .selectable > .selectionOver { border-radius: 0px 8px 8px 0px; }
 	.block.showMenu > .wrapContent.bgColor { border-radius: 0px 8px 8px 0px; }
 
@@ -94,7 +94,7 @@
 }
 
 .dragProvider.isDragging {
-	.block > .wrapContent > .selectable > .menuOver { display: block; }
+	.block > .wrapContent > .selectable > .menuOver { opacity: 1; }
 	.block > .wrapContent > .selectable > .selectionOver { display: none; }
 	.block > .wrapMenu > .icon.dnd { opacity: 1; }
 }
