--- a/src/scss/block/bookmark.scss
+++ b/src/scss/block/bookmark.scss
@@ -3,11 +3,9 @@
 .blocks {
 	.block.blockBookmark { padding: 6px 0px; }
 	.block.blockBookmark {
-		.dropTarget { border-radius: 6px; }
-	
 		.inner { 
 			display: flex; border-radius: inherit; border: 1px solid $colorLightGrey; transition: border-color 0.2s ease-in-out; 
-			cursor: pointer; position: relative; 
+			cursor: pointer; position: relative; border-radius: 6px;
 		}
 		.inner:hover { border-color: $colorDarkGrey; }
 		
