--- a/src/scss/block/dataview.scss
+++ b/src/scss/block/dataview.scss
@@ -80,6 +80,10 @@
 				.smile { margin: 0px 4px 0px 0px; }
 				.name { display: inline-block; vertical-align: top; @include text-overflow-nw; max-width: 500px; }
 			}
+
+			.cellContent.c-number {
+				.name { display: inline-block; vertical-align: top; @include text-overflow-nw; width: 100%; }
+			}
 			
 			.cell.c-multiselect {
 				.tag { margin: 0px 6px 6px 0px; }
