block merge fix

--- a/src/scss/block/dataview.scss
+++ b/src/scss/block/dataview.scss
@@ -128,7 +128,7 @@
 					.icon.plus { background-image: url('~img/icon/dataview/button/plus1.svg'); }
 				}
 				td.cell.isName {
-					.icon.expand { display: block; position: absolute; right: 14px; top: 50%; margin-top: -10px; opacity: 0; }
+					.icon.expand { display: block; position: absolute; right: 14px; top: 14px; opacity: 0; }
 					.name { line-height: 20px; width: calc(100% - 48px); }
 				}
 
