new edit mechanism

--- a/src/scss/block/dataview.scss
+++ b/src/scss/block/dataview.scss
@@ -73,7 +73,7 @@
 			
 			.cellContent {
 				.smile { margin: 0px 4px 0px 0px; }
-				.name { display: inline-block; vertical-align: top; }
+				.name { display: inline-block; vertical-align: top; height: 20px; }
 			}
 			
 			.cell.c-multiselect {
