--- a/src/scss/block/dataview/view/grid.scss
+++ b/src/scss/block/dataview/view/grid.scss
@@ -23,7 +23,7 @@
 			td.cell.add { color: $colorDarkGrey; transition: $transitionFast; cursor: pointer; line-height: 20px; }
 			td.cell.add {
 				 .icon { vertical-align: top; margin: 0px 4px 0px 0px; }
-				 .name { vertical-align: top; display: inline-block; line-height: 20px; vertical-align: top; }
+				 .name { vertical-align: top; display: inline-block; line-height: 20px; height: 20px; vertical-align: top; }
 			}
 			td.cell.add:hover { color: $colorBlack; }
 			td.cell.add:hover {
@@ -39,7 +39,7 @@
                 .input-text { padding: 0px; height: 20px; }
 				.textarea { 
 					padding: 0px; background: none; padding: 14px; box-shadow: 0px 0px 0px 2px $colorOrange inset; 
-					position: absolute; left: 0px; top: 0px; height: auto; width: 100%; background: #fff;
+					position: absolute; left: 0px; top: 0px; height: auto; width: 100%; background: #fff; z-index: 1;
 				}
             }
 			td.cell.isEditing.c-description { padding: 0px !important; box-shadow: 0px 0px; }
@@ -51,8 +51,10 @@
 				}
 			}
 
+			td.cell.c-checkbox { padding: 12px 14px; }
+
 			.icon.checkbox { vertical-align: top; }
-			.cellContent.c-title, .cellContent.c-number, .cellContent.c-description { overflow: hidden; height: 22px; }
+			.cellContent.c-title, .cellContent.c-number, .cellContent.c-description { overflow: hidden; height: 20px; }
 		}
     }
 }
