--- a/src/scss/block/common.scss
+++ b/src/scss/block/common.scss
@@ -9,10 +9,11 @@
 		.flex { position: relative; z-index: 2; }
 		.icon.dnd { 
 			width: 12px; height: 100%; background-size: 20px 20px; opacity: 0; cursor: grab; position: absolute; right: 2px; top: 0px;
-			background-image: none; border: 1px solid $colorLightGrey; border-radius: 12px; box-shadow: 0px 0px;
+			background-image: url('~img/icon/block/menu0.svg'); border: 1px solid $colorLightGrey; border-radius: 12px; box-shadow: 0px 0px;
 		}
 		.icon.dnd:hover { 
-			background-image: url('~img/icon/block/menu.svg'); border-color: $colorOrange; box-shadow: 0px 0px 0px 1px $colorOrange;
+			background-image: url('~img/icon/block/menu1.svg'); border-color: $colorOrange; 
+			box-shadow: 0px 0px 0px 1px $colorOrange inset;
 		}
 		
 		.colResize { width: 0px; position: relative; opacity: 0; z-index: 10; }
