--- a/src/scss/component/dragLayer.scss
+++ b/src/scss/component/dragLayer.scss
@@ -2,17 +2,20 @@
 
 .dragLayer { position: fixed; z-index: 1000; left: -100000px; top: -100000px; }
 .dragLayer {
+	.inner { background: #fff; }
 	.blocks { margin: 0px !important; }
 	.blocks {
-		.block { border: 0px; width: 100% !important; padding: 0px !important; }
+		.block { border: 0px; width: 100% !important; padding: 0px !important }
 		.block {
 			.wrapMenu { display: none; }
-			.dropTarget { padding-left: 4px; opacity: 0.35; }
+			.wrapContent { width: 100%; padding: 0px }
+			
+			.dropTarget { padding-left: 4px !important; opacity: 0.35; }
 			
 			.children {
 				.block { padding: 0px; }
-				.wrapMenu { display: block; }
-				.wrapContent { width: calc(100% - 46px); padding: 0px; }
+				.wrapMenu { display: block; opacity: 0; }
+				.wrapContent { width: calc(100% - 48px); padding: 0px; }
 			}
 		}
 		.block:last-child { margin: 0px; }
