--- a/src/scss/block/common.scss
+++ b/src/scss/block/common.scss
@@ -8,12 +8,12 @@
 		
 		.flex { position: relative; z-index: 2; }
 		.icon.dnd { 
-			width: 12px; height: 100%; background-size: 20px 20px; opacity: 0; cursor: grab; position: absolute; right: 2px; top: 0px;
-			background-image: url('~img/icon/block/menu0.svg'); border: 1px solid $colorLightGrey; border-radius: 12px; box-shadow: 0px 0px;
+			width: 12px; height: 100%; background-size: 8px 16px; opacity: 0; cursor: grab; position: absolute; right: 2px; top: 0px;
+			background-image: url('~img/icon/block/menu0.svg'); border: 1px solid $colorLightGrey; border-radius: 12px; 
+			transition: opacity 0.2s ease-in-out;
 		}
 		.icon.dnd:hover { 
 			background-image: url('~img/icon/block/menu1.svg'); border-color: $colorOrange; 
-			box-shadow: 0px 0px 0px 1px $colorOrange inset;
 		}
 		
 		.colResize { width: 0px; position: relative; opacity: 0; z-index: 10; }
