--- a/src/scss/block/div.scss
+++ b/src/scss/block/div.scss
@@ -5,7 +5,7 @@
 	.block.blockDiv {
 		.dropTarget { height: 16px; }
 		
-		.icon.dnd { height: 12px; margin: 2px 6px 0px 0px; background-image: none !important; }
+		.icon.dnd { height: 12px; top: 50%; margin-top: -6px; background-image: none !important; }
 		.icon.dnd:hover { background-image: none !important; }
 
 		.div { width: 100%; position: absolute; top: 50%; left: 0px; text-align: center; }
