--- a/src/scss/component/select.scss
+++ b/src/scss/component/select.scss
@@ -3,6 +3,7 @@
 .select { 
 	border-radius: 4px; border: solid 1px #d2d0c2; display: inline-block; vertical-align: middle; @include text-small;
 	letter-spacing: 0.08px; transition: $transitionFast; position: relative; cursor: pointer; font-family: 'Inter';
+	white-space: nowrap;
 }
 
 .select:hover { background: #f7f5f0; }
