--- a/src/scss/component/textarea.scss
+++ b/src/scss/component/textarea.scss
@@ -2,7 +2,7 @@
 
 .textarea {
 	width: 100%; resize: none; font-size: 14px; border: 0px; background: #f7f5f0; padding: 20px;
-	line-height: 22px; letter-spacing: -0.12px; color: $colorBlack; display: block; font-family: 'Mono'; 
+	line-height: 22px; letter-spacing: -0.12px; color: $colorBlack; display: block; font-family: 'Inter'; 
 }
 .textarea::placeholder { color: #d2d0c2; }
 
