--- a/src/scss/menu/block/common.scss
+++ b/src/scss/menu/block/common.scss
@@ -7,6 +7,8 @@
 		.icon { width: 24px; height: 24px; background-size: 100% 100%; }
 		.icon.arrow { position: absolute; right: 10px; top: 4px; margin: 0px; background-image: url('~img/arrow/menu.svg'); }
 	}
+
+	.menu.menuBlockMore.fromIndex { width: 160px; }
 	
 	.menu.menuBlockAdd { width: 360px !important; }
 	.menu.menuBlockAdd {
