--- a/src/scss/font.scss
+++ b/src/scss/font.scss
@@ -1,3 +1,4 @@
+/*
 @font-face {
 	font-family: 'Mono'; font-style: normal; font-weight: 400;
 	src: url('~font/mono/regular.ttf') format('truetype');
@@ -13,6 +14,24 @@
 @font-face {
 	font-family: 'Mono'; font-style: italic; font-weight: 600;
 	src: url('~font/mono/bolditalic.ttf') format('truetype');
+}
+*/
+
+@font-face {
+	font-family: 'Plex'; font-style: normal; font-weight: 400;
+	src: url('~font/plex/regular.ttf') format('truetype');
+}
+@font-face {
+	font-family: 'Plex'; font-style: bold; font-weight: 600;
+	src: url('~font/plex/bold.ttf') format('truetype');
+}
+@font-face {
+	font-family: 'Plex'; font-style: italic; font-weight: 400;
+	src: url('~font/plex/italic.ttf') format('truetype');
+}
+@font-face {
+	font-family: 'Plex'; font-style: italic; font-weight: 600;
+	src: url('~font/plex/bolditalic.ttf') format('truetype');
 }
 
 @font-face {
