--- a/src/scss/page/auth.scss
+++ b/src/scss/page/auth.scss
@@ -7,7 +7,7 @@
 	.input { height: 40px; border: solid 1px #d2d0c2; }
 	
 	.textarea { 
-		font-family: 'Mono'; padding: 7px 16px; height: auto; margin: 0px 0px 32px 0px; border: solid 1px #d2d0c2; 
+		font-family: 'Inter'; padding: 7px 16px; height: auto; margin: 0px 0px 32px 0px; border: solid 1px #d2d0c2; 
 		background-color: #fff; 
 	}
 	
