--- a/src/scss/page/main/index.scss
+++ b/src/scss/page/main/index.scss
@@ -29,9 +29,10 @@
 				padding: 0px 16px; @include text-overflow-nw;  
 			}
 			.icon.more { 
-				background-image: url('~img/icon/index/more.svg'); width: 20px; height: 20px; cursor: pointer; position: absolute;
+				background-image: url('~img/icon/index/more0.svg'); width: 20px; height: 20px; cursor: pointer; position: absolute;
 				right: 16px; top: 16px; opacity: 0;
 			}
+			.icon.more:hover { background-image: url('~img/icon/index/more1.svg'); }
 		}
 		.item.dragging { transition: none; box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.2); }
 		.item.last { margin-right: 0px; }
