--- a/src/scss/block/text.scss
+++ b/src/scss/block/text.scss
@@ -12,10 +12,7 @@
 		
 		lnk { cursor: pointer; color: inherit; border-bottom: 1px solid $colorDarkGrey; text-decoration: none; }
 		
-		kbd { 
-			display: inline; font-family: 'Plex'; border-radius: 2px; background: $colorDarkGrey; 
-			background: rgba(172,169,150,0.15); font-size: 15px; 
-		}
+		kbd { display: inline; font-family: 'Plex'; border-radius: 2px; background: rgba(172,169,150,0.15); font-size: 15px; }
 
 		smile {
 			.smile { display: inline; }
