--- a/src/scss/component/cover.scss
+++ b/src/scss/component/cover.scss
@@ -2,7 +2,7 @@
 
 .cover { 
 	background-repeat: no-repeat; background-size: cover; background-position: top center; color: #fff; position: fixed; left: 0px; 
-	top: 0px; width: 100%; height: 100%; background-color: #9BB0B7;
+	top: 0px; width: 100%; height: 100%; background-color: $colorBlack;
 }
 
 .cover.type2.white { background-color: #fff; }
